6.37
    Test Fixes
    - cd() test on VMS used non-native paths. [bleadperl 31534]
    
    Bug Fixes
    - BSD detection code would not pick up bsdos or internix
    
    Portability Fixes
    - Add "dragonfly" to the list of BSDish operating systems

6.36  Tue Jul  3 01:06:40 PDT 2007
    Test Fixes
    - version.pm prior to 0.7203 caused Foo->VERSION to reformat
      $Foo::VERSION.  This caused prereq.t to fail.

6.35  Sun Jul  1 20:53:38 PDT 2007
    New Features
    * MakeMaker will now try to "use version" before parsing $VERSION.
      This allows "$VERSION = qv(1.2.3)" to work.

    Test Fixes
    - writemakefile_args.t now works with older versions of version.pm

6.34  Sat Jun 30 11:06:54 CDT 2007
    Test Fixes
    - Accidentally hard coded the version of strict.pm [rt.cpan.org 27838]

6.33  Fri Jun 29 17:15:34 CDT 2007
    New Features
    * VERSION now accepts version objects without warning.
      [rt.cpan.org 26075]

    Bug Fixes
    - Properly not installing MANIFEST.SKIP when ExtUtils::Manifest is not
      being installed. [rt.cpan.org 21318]
    - fixin() no longer clobbers $/ [rt.cpan.org 26234]
    - Fixed bug finding cross-compiled perls [bleadperl 31404]
    - Looking up to 8 levels up to find uninstalled perls
      [bleadperl 30932]
    * A test failure in a sub-project would not cause "make test" to
      fail. [rt.cpan.org 27804]

    Windows
    - Embed manifest files in EXEs and DLLs when building with VC++ 8.x
      [bleadperl #29266] [rt.cpan.org 26208]
    - Improved the subdir command code so DIR can do more than one level
      down. [rt.cpan.org 25180]
    - Fix static builds on Win32 by using -DPERLDLL [bleadperl 31229]

    VMS
    - Use linker flags rather than compiler flags to determine if the
      perl sharable image was linked debug.  This keeps OPTIMIZE from
      confusing things. [rt.cpan.org 25268]
    - Accidental use of $\ in a regex. [bleadperl 30521]

    BSD