@@ -1,4 +1,10 @@
 6.37
+    Improvements
+    - Upgraded the META.yml to version 1.3 of the spec (which really
+      doesn't change anything).  Thanks bdfoy.
+    - MakeMaker now always includes the required 'author' field in 
+      the META.yml even if it's undef.
+
     Test Fixes
     - cd() test on VMS used non-native paths. [bleadperl 31534]
     
